# oid2yolo

./: .gitignore  Pipfile  README.md  analyze_yolo_dataset.ipynb  run_yolov5.sh  run_yolov5_wo_GPU.sh  setup.cfg  setup.py
.ipynb_checkpoints/: analyze_yolo_dataset-checkpoint.ipynb
aws/: .tmux.conf  change_nc.sh  extract_dataset_archives.py  fdlpd_colab.yaml  prepare_training.sh  yolo_train.py  yolo_train.sh  yolov5l_train.sh  yolov5m_train.sh  yolov5s_train.sh  yolov5x_train.sh
config/: fdlpd.yaml  fdlpd_orig.yaml  fdlpd_yolov5.yaml  oid.json  oid_bak.json  oid_orig.json  oid_yolov5.json
scripts/: yolo_dataset_archive.py  yolo_dataset_extract.sh  yolo_dataset_upload.sh  yolo_files_upload.sh  yolo_train.sh
src/oid2yolo/: __init__.py  annotations.py  api.py  cli.py  config.py
tests/: conftest.py
tests/config/: fdlpd_ok.yaml  oid_ok.json
tests/unit/: test_annotations.py  test_api.py  test_config.py  test_oid2yolo.py
