[metadata]
name = Oid2yolo
url = https://github.com/naomori/oid2yolo
project_url =
    Documentation = https://github.com/naomori/oid2yolo
    Code = https://github.com/naomori/oid2yolo.git
license = BSD-3-Clause
author = Naoki Morita
author_email = naoki.morita@gmail.com
description = Convert Open Images Dataset to YOLO format

[options]
packages = find:
package_dir = = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    oid2yolo = oid2yolo.cli:main

[tool:pytest]
tesetpaths = tests

[options.extras_require]
dev =
    pytest

